--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -1,3 +1,5 @@
+@import "normalize"; 
+
 html, body {
     width: 100%;
     height: 100%;
@@ -5,19 +7,47 @@ html, body {
     padding: 0;
 }
 
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: sans-serif;
-}
-
 a {
     text-decoration: none;
 }
 
+ul{
+    padding: 0;
+    li{
+
+    }
+}
+
 .container {
-    text-align: center;
+    #text{
+        float: left;
+        width: 88.4%;
+        resize: none;
+        height: auto;
+        display: block;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        border: none;
+        text-indent: 2px;
+        &:focus{
+            border: none;
+            outline: none;
+        }
+    }
+
+    #holder{
+        float: right;
+        width: 10%;
+        background: #f5f5f5;
+        overflow: hidden;
+
+        ul{
+            li{
+                list-style: none;
+            }
+        }
+    }
 }
 
 .subtitle {
